--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,21 @@
   </header>
   <main class="content">
     <section class="profile page__section">
-      <div class="profile__image" style="background-image: url('<%=require('./images/avatar.jpg')%>')";></div>
+      <div class="profile__avatar-container">
+        <img
+          class="profile__image"
+          src="<%=require('./images/avatar.jpg')%>"
+          alt="Аватар пользователя"
+        />
+        <div class="profile__avatar-overlay">
+          <img
+            src="<%=require('./images/edit-icon.svg')%>"
+            alt="Редактировать аватар"
+            class="profile__edit-icon"
+          />
+        </div>
+      </div>
+      
       <div class="profile__info">
         <h1 class="profile__title">Жак-Ив Кусто</h1>
         <button class="profile__edit-button" type="button"></button>
@@ -38,8 +52,32 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
       <form class="popup__form" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+        <input
+        type="text"
+        name="name"
+        class="popup__input popup__input_type_name"
+        placeholder="Имя"
+        required
+        minlength="2"
+        maxlength="40"
+        pattern="[A-Za-zА-Яа-яЁё\s-]+"
+        data-validation-type="pattern"
+        data-error="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы."
+      />
+      <span class="popup__input-error name-error" id="name-error"></span>
+      <input
+        type="text"
+        name="description"
+        class="popup__input popup__input_type_description"
+        placeholder="Занятие"
+        required
+        minlength="2"
+        maxlength="200"
+        pattern="[A-Za-zА-Яа-яЁё\s-]+"
+        data-validation-type="pattern"
+        data-error="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы."
+      />
+      <span class="popup__input-error description-error" id="description-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -49,32 +87,87 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="new-place">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
-        <button type="submit" class="button popup__button">Сохранить</button>
-      </form>
+        <input
+              type="text"
+              name="place-name"
+              class="popup__input popup__input_type_card-name"
+              placeholder="Название"
+              required
+              minlength="2"
+              maxlength="30"
+              pattern="[A-Za-zА-Яа-яЁё\s-]+"
+              data-validation-type="pattern"
+              data-error="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы."
+            />
+            <span class="popup__input-error place-name-error"></span>
+            <input
+              type="url"
+              name="link"
+              class="popup__input popup__input_type_url"
+              placeholder="Ссылка на картинку"
+              required
+            />
+            <span class="popup__input-error link-error"></span>
+            <button
+            type="submit"
+            class="button popup__button popup__save-button_disabled"
+          >
+            Создать
+          </button>
+        </form>
+      </div>
     </div>
-  </div>
-  <div class="popup popup_type_image">
-    <div class="popup__content popup__content_content_image">
-      <button type="button" class="popup__close"></button>
-      <img src="" alt="" class="popup__image">
-      <p class="popup__caption"></p>
+    <div class="popup popup_type_image">
+      <div class="popup__content popup__content_content_image">
+        <button type="button" class="popup__close"></button>
+        <img data-src="" alt="" class="popup__image" />
+        <p class="popup__caption"></p>
+      </div>
     </div>
-  </div>
-</div>
+    <div class="popup popup_type_confirm">
+      <div class="popup__content-delete">
+        <button type="button" class="popup__close"></button>
+        <h3 class="popup__title">Вы уверены?</h3>
+        <form class="popup__form" name="confirm-delete">
+          <button type="submit" class="button popup__button">Да</button>
+        </form>
+      </div>
+    </div>
+    <div class="popup popup_type_avatar">
+      <div class="popup__content">
+        <button type="button" class="popup__close"></button>
+        <h3 class="popup__title">Обновить аватар</h3>
+        <form class="popup__form" name="update-avatar">
+          <input
+            type="url"
+            name="avatar"
+            class="popup__input popup__input_type_avatar"
+            placeholder="Ссылка на аватар"
+            required
+          />
+          <span class="popup__input-error avatar-error"></span>
+          <button
+            type="submit"
+            class="button popup__button popup__save-button_disabled"
+          >
+            Сохранить
+          </button>
+        </form>
+      </div>
+    </div>
 
-
-<template id="card-template">
-  <li class="places__item card">
-    <img class="card__image" src="" alt="" />
-    <button type="button" class="card__delete-button"></button>
-    <div class="card__description">
-      <h2 class="card__title">
-      </h2>
-      <button type="button" class="card__like-button"></button>
-    </div>
-  </li>
-</template>
+    <template id="card-template">
+      <li class="places__item card">
+        <img class="card__image" data-src="" alt="" />
+        <button type="button" class="card__delete-button"></button>
+        <div class="card__description">
+          <h2 class="card__title"></h2>
+          <div class="card__like-container">
+            <button type="button" class="card__like-button"></button>
+            <span class="card__like-count">0</span>
+          </div>
+        </div>
+      </li>
+    </template>
 </body>
 </html>
