--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     </p> 
   </footer> 
 
-  <div class="popup popup_type_edit"> 
+  <div class="popup popup_is-animated popup_type_edit"> 
     <div class="popup__content"> 
       <button type="button" class="popup__close"></button> 
       <h3 class="popup__title">Редактировать профиль</h3> 
@@ -65,7 +65,7 @@
     </div> 
   </div> 
 
-  <div class="popup popup_type_new-card"> 
+  <div class="popup popup_is-animated popup_type_new-card"> 
     <div class="popup__content"> 
       <button type="button" class="popup__close"></button> 
       <h3 class="popup__title">Новое место</h3> 
@@ -93,7 +93,7 @@
     </div> 
   </div> 
 
-  <div class="popup popup_type_image"> 
+  <div class="popup popup_is-animated popup_type_image"> 
     <div class="popup__content popup__content_content_image"> 
       <button type="button" class="popup__close"></button> 
       <img src="" alt="" class="popup__image"> 
@@ -117,7 +117,7 @@
   </li> 
 </template> 
 
-<div class="popup popup_type_update-avatar">
+<div class="popup popup_is-animated popup_type_update-avatar">
   <div class="popup__content">
     <button type="button" class="popup__close"></button>
     <h3 class="popup__title">Обновить аватар</h3>
